# Best-Practice-ai-

./: CLAUDE.md  CTO_AUDIT_REPORT.md  README.md
.github/workflows/: azure-webapps-node.yml
NursingAiAssistant/: .gitignore  App.js  README.md  app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json  react-native.config.js  setup.bat  setup.sh
NursingAiAssistant/.github/workflows/: ci.yml
NursingAiAssistant/__tests__/integration/: ragPipeline.test.js
NursingAiAssistant/__tests__/services/: aiEngine.test.js  auditService.test.js  db.test.js  llamaService.test.js  pdfService.test.js
NursingAiAssistant/android/: build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
NursingAiAssistant/android/app/: build.gradle  debug.keystore  proguard-rules.pro
NursingAiAssistant/android/app/src/main/cpp/: CMakeLists.txt  nursing_bridge.cpp
NursingAiAssistant/src/components/: LanguageSwitcher.js
NursingAiAssistant/src/database/: db.js
NursingAiAssistant/src/i18n/: index.js
NursingAiAssistant/src/screens/: AdminScreen.js  AuditScreen.js  ChatScreen.js  HomeScreen.js
NursingAiAssistant/src/services/: aiEngine.js  auditService.js  errorReporting.js  llamaService.js  pdfService.js
NursingAiAssistant/src/styles/: colors.js  typography.js
cnpv-platform/: .env.example  .gitignore  README.md  docker-compose.yml  package.json  tsconfig.base.json
cnpv-platform/apps/backend/: Dockerfile  package.json  tsconfig.json
cnpv-platform/apps/mobile/: app.json  package.json
docs/: test-coverage-analysis.md
(+117 files in other folders)
